# normalSolver

./: README.md  pyproject.toml  requirements.txt  sample.py  version.py
.github/workflows/: python-publish.yml
nomal_captcha/: __init__.py  main.py  tasks.py  version.py
