[build-system]
requires = ["setuptools", "setuptools-scm", "flit_core>=3.2,<4"]
build-backend = "setuptools.build_meta"

[project]
name = "normal_captcha"
authors = [
    {name = "ms5806166@gmail.com", email = "ms5806166@gmail.com"},
]

dynamic = ["version"]

description = "A tool for solving normal captchas."
readme = "README.md"
requires-python = ">=3.*"
license = {text = "MIT"}
dependencies = [
    "pytesseract==0.3.10",
    'Pillow==9.5.0',
]

[project.scripts]
my-script = "normal_captcha_solver.main:main"