[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "normal_captcha"
authors = [
    {name = "ms5806166@gmail.com", email = "ms5806166@gmail.com"},
]

readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytesseract==0.3.10",
    'Pillow==9.5.0',
]

[tool.flit.module]
name = "normal_captcha"

[project.scripts]
my-script = "normal_captcha.main:main"